--- a/productPreviewCard/style.css
+++ b/productPreviewCard/style.css
@@ -1,6 +1,140 @@
+/*
+
+Style Guide
+
+Typography
+  Font size (paragraph): 14px
+
+COLORS
+  Primary:
+    Dark Cyan
+    Cream
+
+  Neutral:
+    Very Dark Blue
+    Dark Grayish Blue
+    White
+
+*/
+
+/* color vars */
+
+:root {
+  --dark-cyan: hsl(158, 36%, 37%);
+  --cream: hsl(30, 38%, 92%);
+  --very-dark-blue: hsl(212, 21%, 14%);
+  --dark-grayish-blue: hsla(228, 12%, 48%, 0.727);
+  --white: hsl(0, 0%, 100%);
+}
+
 /* hard reset */
+
+body {
+  background-color: var(--cream);
+  font-family: "Fraunces", sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+main {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.product {
+  background-color: var(--white);
+  height: 28rem;
+  width: 38rem;
+  border-radius: 1rem;
+  margin: auto 0;
+
+  display: flex;
+  overflow: hidden;
+  box-shadow: 0px 1px 24px rgba(149, 157, 165, 0.274);
+}
+
+.product-image {
+  width: 100%;
+}
+
+.product-text {
+  padding: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+.product-overview {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.product-category {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.65rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  color: var(--dark-grayish-blue);
+}
+
+.product-title {
+  font-size: calc(34rem / 16);
+  line-height: 2.2rem;
+}
+
+.product-details {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.product-description {
+  font-family: "Montserrat", sans-serif;
+  font-size: calc(14rem / 16); /* converts to 14px */
+  color: var(--dark-grayish-blue);
+  line-height: 1.4rem;
+  /* margin-right: 1.5rem; */
+}
+
+.product-price {
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+.product-price--sale {
+  font-size: calc(32rem / 16);
+  color: var(--dark-cyan);
+}
+
+.product-price--full {
+  font-size: 0.65rem;
+  color: var(--dark-grayish-blue);
+  font-size: calc(14rem / 16); /* converts to 14px */
+  text-decoration: line-through;
+}
+
+.btn--add-to-cart {
+  border: none;
+  color: var(--white);
+  background-color: var(--dark-cyan);
+  font-family: "Monsterrat", sans-serif;
+  padding: 1rem 0;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  font-size: 1rem;
+  transition: all 0.2s;
+}
+
+.btn--add-to-cart:hover,
+.btn--add-to-cart:active {
+  background-color: hsl(158, 38%, 18%);
 }
