--- a/productPreviewCard/style.css
+++ b/productPreviewCard/style.css
@@ -49,17 +49,20 @@ main {
 .product {
   background-color: var(--white);
   height: 28rem;
-  width: 38rem;
+  max-width: 38rem;
   border-radius: 1rem;
   margin: auto 0;
 
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   overflow: hidden;
   box-shadow: 0px 1px 24px rgba(149, 157, 165, 0.274);
 }
 
 .product-image {
-  width: 100%;
+  background-image: url("image-product-desktop.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .product-text {
@@ -99,7 +102,6 @@ main {
   font-size: calc(14rem / 16); /* converts to 14px */
   color: var(--dark-grayish-blue);
   line-height: 1.4rem;
-  /* margin-right: 1.5rem; */
 }
 
 .product-price {
