--- a/interactiveRatingComponent/style.css
+++ b/interactiveRatingComponent/style.css
@@ -58,3 +58,54 @@ p {
   font-size: calc(15rem / 16);
   color: var(--light-grey);
 }
+
+main {
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+}
+
+.card-container {
+  margin: auto 0;
+  background-color: var(--dark-blue);
+  border-radius: 1rem;
+  padding: 2rem;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+.card-description {
+  max-width: 22rem;
+}
+
+.rating-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.rating-selection {
+  list-style-type: none;
+}
+
+.btn--submit {
+  background-color: var(--orange);
+  border: none;
+  padding: 1rem;
+  color: var(--white);
+  border-radius: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+
+.round-icon {
+  background-color: hsl(216, 12%, 25%);
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  padding: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
