implemented mouse over via JS to ensure .selected class takes precedence

--- a/interactiveRatingComponent/style.css
+++ b/interactiveRatingComponent/style.css
@@ -101,8 +101,7 @@ main {
   cursor: pointer;
 }
 
-.rating-selection:hover,
-.rating-selection:active {
+.hover {
   background-color: var(--orange);
 }
 
