--- a/interactiveRatingComponent/style.css
+++ b/interactiveRatingComponent/style.css
@@ -114,7 +114,12 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.2s;
+  transition: all 0.3s;
+}
+
+.round-icon.rating,
+.rating-label {
+  cursor: pointer;
 }
 
 .rating-description,
@@ -122,12 +127,15 @@ main {
   max-width: 22rem;
 }
 
-.rating-fieldset {
-  border: none;
+.form-field {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-.rating-input {
-  display: none;
+.rating-fieldset {
+  border: none;
+  display: flex;
 }
 
 .modal-description,
@@ -135,8 +143,14 @@ main {
   text-align: center;
 }
 
+.rating-input {
+  appearance: none;
+  width: 0;
+}
+
 .rating-container {
   display: flex;
+  width: 100%;
   justify-content: space-between;
 }
 
@@ -159,6 +173,7 @@ main {
   letter-spacing: 0.2rem;
   cursor: pointer;
   transition: all 0.2s;
+  width: 100%;
 }
 
 .btn--submit:hover,
