--- a/3-column-preview-card/style.css
+++ b/3-column-preview-card/style.css
@@ -43,6 +43,27 @@ Typography
 
 main {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card-container {
+  margin: 0 auto;
+  max-width: 90vw;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-container:first-of-type {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.card-container:last-of-type {
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 
 .bg--bright-orange {
@@ -55,4 +76,12 @@ main {
 
 .bg--very-dark-cyan {
   background-color: var(--very-dark-cyan);
+}
+
+.card-header {
+  font-family: "Big Shoulders Display";
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
