--- a/3-column-preview-card/style.css
+++ b/3-column-preview-card/style.css
@@ -51,9 +51,10 @@ main {
 .card-container {
   margin: 0 auto;
   max-width: 90vw;
-  padding: 2rem;
+  padding: 3rem;
   display: flex;
   flex-direction: column;
+  gap: 1.125rem;
 }
 
 .card-container:first-of-type {
@@ -68,14 +69,17 @@ main {
 
 .bg--bright-orange {
   background-color: var(--bright-orange);
+  color: var(--bright-orange);
 }
 
 .bg--dark-cyan {
   background-color: var(--dark-cyan);
+  color: var(--dark-cyan);
 }
 
 .bg--very-dark-cyan {
   background-color: var(--very-dark-cyan);
+  color: var(--very-dark-cyan);
 }
 
 .card-header {
@@ -83,5 +87,35 @@ main {
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+  color: white;
+}
+
+.card-description,
+.btn--learn-more {
+  font-family: "Lexend Deca", sans-serif;
+}
+
+.card-description {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: calc(15rem / 16);
+  line-height: 1.5rem;
+}
+
+.btn--learn-more:link,
+.btn--learn-more:visited {
+  text-decoration: none;
+  background-color: white;
+  color: currentColor;
+  border-radius: 2rem;
+  text-transform: capitalize;
+  padding: 1rem 2rem;
+  max-width: fit-content;
+}
+
+.btn--learn-more:hover,
+.btn--learn-more:active {
+  background-color: inherit;
+  color: white;
+  box-shadow: inset 0 0 0 2px white;
 }
