--- a/3-column-preview-card/style.css
+++ b/3-column-preview-card/style.css
@@ -35,6 +35,16 @@ Typography
 
 /* hard reset */
 
+.sr-only { /* from: https://css-tricks.com/inclusively-hidden/ */
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 * {
   margin: 0;
   padding: 0;
