--- a/result-summary-component/src/Components/Result/Result.module.css
+++ b/result-summary-component/src/Components/Result/Result.module.css
@@ -9,6 +9,8 @@
   border-bottom-right-radius: 1rem;
   padding: 1rem;
   overflow: hidden;
+  min-height: 100%;
+  justify-content: space-between;
 }
 
 .result-title {
@@ -50,4 +52,22 @@
 .result-description {
   max-width: 30ch;
   margin-bottom: 1rem;
+}
+
+@media (min-width: 40rem) {
+  .result-score-container {
+    min-height: 10rem;
+  }
+
+  .result-container {
+    padding: 2rem;
+  }
+
+  .result-description {
+    max-width: 25ch;
+  }
+
+  .result-container {
+    border-radius: 1rem;
+  }
 }
