--- a/result-summary-component/src/Components/Summary/Summary.module.css
+++ b/result-summary-component/src/Components/Summary/Summary.module.css
@@ -1,11 +1,9 @@
 .summary-container {
-  padding: 1rem;
+  padding: 1.5rem;
   color: hsl(229, 22%, 25%);
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: 20rem;
-  margin: 0 auto;
 }
 
 .summary-title {
@@ -24,4 +22,18 @@
 
 .btn--continue:hover {
   background: linear-gradient(var(--light-slate-blue), var(--light-royal-blue));
+}
+
+@media (min-width: 40em) {
+  .summary-container {
+    padding: 1.25rem;
+  }
+
+  .summary-title {
+    margin-bottom: 0.5rem;
+  }
+
+  .btn--continue {
+    margin-top: 0.60rem;
+  }
 }
