--- a/result-summary-component/src/index.css
+++ b/result-summary-component/src/index.css
@@ -14,6 +14,17 @@ html {
   --persian-blue: hsla(241, 72%, 46%, 0);
 }
 
+.sr-only {
+  /* from: https://css-tricks.com/inclusively-hidden/ */
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 .main-container {
   min-width: 16rem;
 }
